# hasktorch

./: cabal.project  default.nix  index.html  stack.yaml
.circleci/: cabal.project.local-8.4.4  cabal.project.local-8.6.1  config.yml  run-build-locally.sh
backprop-0.2.4.0/: Numeric-Backprop-Class.html  Numeric-Backprop-Explicit.html  Numeric-Backprop-Num.html  Numeric-Backprop-Op.html  Numeric-Backprop.html  Prelude-Backprop-Explicit.html  Prelude-Backprop-Num.html  Prelude-Backprop.html  backprop.haddock  doc-index-126.html  doc-index-36.html  doc-index-37.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-94.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-V.html  doc-index-W.html  (+4 more)
examples/: examples.cabal
hasktorch-codegen-0.0.1.0/: CodeGen-FileMappings.html  CodeGen-Render-C.html  CodeGen-Render-Haskell.html  CodeGen-Types-Parsed.html  doc-index-42.html  doc-index-46.html  doc-index-47.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-F.html  doc-index-L.html  doc-index-M.html  doc-index-Q.html  doc-index-S.html  doc-index-U.html  doc-index-W.html  setup-config
hasktorch-core-0.0.1.0/: Torch-Byte-Dynamic.html  Torch-Byte-Storage.html  Torch-Byte.html  Torch-Char.html  Torch-Core-Exceptions.html  Torch-Core-LogAdd.html  Torch-Double-Dynamic.html  Torch-Double-Storage.html  Torch-Int-Dynamic.html  Torch-Short-Dynamic.html  Torch-Short.html  doc-index-42.html  doc-index-43.html  doc-index-47.html  doc-index-58.html  doc-index-62.html  doc-index-A.html  doc-index-B.html  doc-index-C.html  doc-index-G.html  doc-index-H.html  doc-index-K.html  doc-index-O.html  doc-index-P.html  doc-index-U.html  doc-index-X.html  doc-index.html  setup-config
hasktorch-indef-0.0.1.0/: Torch-Indef-Dynamic-NN-Activation.html  Torch-Indef-Dynamic-NN-Pooling.html  Torch-Indef-Dynamic-NN.html  Torch-Indef-Dynamic-Tensor-Math-CompareT.html  Torch-Indef-Dynamic-Tensor-Math-Floating.html  Torch-Indef-Dynamic-Tensor-Math-Lapack.html  Torch-Indef-Dynamic-Tensor-Math-Pointwise-Signed.html  Torch-Indef-Dynamic-Tensor-Math-Scan.html  Torch-Indef-Dynamic-Tensor-Mode.html  Torch-Indef-Dynamic-Tensor-TopK.html  Torch-Indef-Static-NN-Criterion.html  Torch-Indef-Static-NN-Layers.html  Torch-Indef-Static-NN-Sampling.html  Torch-Indef-Static-NN.html  Torch-Indef-Static-Tensor-Copy.html  Torch-Indef-Static-Tensor-Math-CompareT.html  Torch-Indef-Static-Tensor-Math-Floating.html  Torch-Indef-Static-Tensor-Math-Pointwise-Signed.html  Torch-Indef-Static-Tensor-Math-Random-TH.html  Torch-Indef-Static-Tensor-Math-Reduce-Floating.html  Torch-Indef-Static-Tensor-Math-Reduce.html  Torch-Indef-Static-Tensor-Math.html  Torch-Indef-Static-Tensor-Mode.html  Torch-Indef-Static-Tensor-Random-TH.html  Torch-Indef-Static-Tensor-Random-THC.html  Torch-Indef-Static-Tensor-TopK.html  Torch-Indef-Types.html  Torch-Sig-Mask-MathReduce.html  Torch-Sig-Storage-Copy.html  Torch-Sig-Storage.html  Torch-Sig-Tensor-Math-Compare.html  Torch-Sig-Tensor-Math-Floating.html  Torch-Sig-Tensor-Math-Pointwise-Floating.html  Torch-Sig-Tensor-Math-Pointwise-Signed.html  Torch-Sig-Tensor-Math-Random-TH.html  Torch-Sig-Tensor-Mode.html  Torch-Sig-Tensor-Random-THC.html  Torch-Sig-Tensor-Sort.html  Torch-Sig-Types-Global.html  doc-index-43.html  (+16 more)
hasktorch-partial-0.0.1.0/: Torch-Sig-Storage-Memory.html  Torch-Sig-Types.html  Torch-Undefined-Tensor-Math-Blas.html  Torch-Undefined-Tensor-Math-Pointwise-Signed.html  Torch-Undefined-Tensor-Math-Random-TH.html  Torch-Undefined-Tensor-Random-THC.html  Torch-Undefined-Types-NN.html  doc-index-A.html  doc-index-B.html  doc-index-D.html  doc-index-I.html  doc-index-N.html  doc-index-P.html  doc-index-R.html  setup-config
hasktorch-raw-tests-0.0.1.0/: Torch-FFI-Tests.html  setup-config
hasktorch-raw-th-0.0.1.0/: Torch-FFI-TH-Byte-Blas.html  Torch-FFI-TH-Byte-FreeStorage.html  Torch-FFI-TH-Byte-Tensor.html  Torch-FFI-TH-Byte-TensorConv.html  Torch-FFI-TH-Byte-TensorRandom.html  Torch-FFI-TH-Byte-Vector.html  Torch-FFI-TH-Char-Blas.html  Torch-FFI-TH-Char-StorageCopy.html  Torch-FFI-TH-Char-TensorMath.html  Torch-FFI-TH-Char-Vector.html  Torch-FFI-TH-Double-StorageCopy.html  Torch-FFI-TH-Double-TensorCopy.html  Torch-FFI-TH-Double-TensorLapack.html  Torch-FFI-TH-Double-TensorRandom.html  Torch-FFI-TH-Double-Vector.html  Torch-FFI-TH-Float-FreeStorage.html  Torch-FFI-TH-Float-Lapack.html  Torch-FFI-TH-Float-TensorConv.html  Torch-FFI-TH-Float-TensorCopy.html  Torch-FFI-TH-Float-TensorMath.html  Torch-FFI-TH-Int-FreeStorage.html  (+22 more)
synthesis/: .gitignore  README.md  package.yaml  synthesis.cabal
synthesis/plotting/: plot.py
synthesis/run-results/: datasets-1.yml
synthesis/synth-gen/: log-4.txt  log.txt  synth-gen.cabal
synthesis/synth-gen/run-results/: datasets-1.yml  datasets-2.yml  datasets-3.yml  datasets-4.yml
synthesis/synth-gen/test-suite/: Main.hs
synthesis/synth-gen/test-suite/Spec/: Ast.hs  FindHoles.hs  Generation.hs  Hint.hs  TypeGen.hs  Types.hs  Utility.hs
synthesis/synthesizer/: log.txt  synthesis.cabal
synthesis/synthesizer/evaluate/: Main.hs
synthesis/synthesizer/evolutionary/: Main.hs
synthesis/synthesizer/grid-search/: Main.hs
synthesis/synthesizer/plotting/: plot.py
synthesis/synthesizer/run-results/: datasets-1.yml  datasets-2.yml
synthesis/synthesizer/synthesizer/: Main.hs
synthesis/synthesizer/test-suite/: Main.hs
synthesis/synthesizer/test-suite/Spec/: NSPS.hs  Optimization.hs  Types.hs  Utility.hs
synthesis/test-suite/: Main.hs
synthesis/test-suite/Spec/: Ast.hs  FindHoles.hs  Generation.hs  Hint.hs  TypeGen.hs  Types.hs  Utility.hs
synthesis/test-suite/Spec/Synthesizer/: NSPS.hs  Optimization.hs  Synthesizer.hs  Types.hs  Utility.hs
(+656 files in other folders)
